--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
           <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
           <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
           <a
-            href="https://vk.com/id512991127"
+            href="/"
             class="social-icon"
             target="_blank"
             ><i class="fab fa-vk"></i
           ></a>
           <a
-            href="https://web.telegram.org/k/#1862256916"
+            href="/"
             class="social-icon"
             target="_blank"
             ><i class="fab fa-telegram-plane"></i
