--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kQAkoc - Профессиональное тестирование ПО</title>
+    <title>QualityGuard - Профессиональное тестирование ПО</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -16,7 +16,7 @@
   <body>
     <header>
       <nav>
-        <div class="logo">kQAkoc</div>
+        <div class="logo">QualityGuard</div>
         <ul>
           <li><a href="#home">Главная</a></li>
           <li><a href="#services">Услуги</a></li>
@@ -98,7 +98,7 @@
           </div>
           <div class="contact-item">
             <i class="fas fa-envelope"></i>
-            <p>info@kqakoc.ru</p>
+            <p>info@qualityguard.ru</p>
           </div>
           <div class="contact-item">
             <i class="fas fa-clock"></i>
@@ -126,7 +126,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2024 kQAkoc. Все права защищены.</p>
+      <p>&copy; 2024 QualityGuard. Все права защищены.</p>
     </footer>
   </body>
 </html>
